updated angular example

--- a/examples/angular/skitza.yaml
+++ b/examples/angular/skitza.yaml
@@ -1,1 +1,54 @@
-const a
+constants:
+  module: skitzaApp
+commands:
+  - command: controller
+    help: Generate new controller
+    short_help: new controller
+    arguments:
+      - name: name
+        help: controller name
+    templates:
+      - source: "{{skitza.cwd}}/controller.js.jinja"
+        destination: "{{skitza.cwd}}/{{name|first_upper}}.controller.js"
+
+      - source: "{{skitza.cwd}}/controller.spec.js.jinja"
+        destination: "{{skitza.cwd}}/{{name|first_upper}}.controller.spec.js"
+
+  - command: directive
+    help: Generate new directive
+    short_help: new directive
+    arguments:
+      - name: name
+        help: directive name
+    templates:
+      - source: "{{skitza.cwd}}/directive.js.jinja"
+        destination: "{{skitza.cwd}}/{{name|first_lower}}.directive.js"
+
+      - source: "{{skitza.cwd}}/controller.spec.js.jinja"
+        destination: "{{skitza.cwd}}/{{name|first_upper}}.controller.spec.js"
+
+  - command: service
+    help: Generate new service
+    short_help: new service
+    arguments:
+      - name: name
+        help: service name
+    templates:
+      - source: "{{skitza.cwd}}/factory.js.jinja"
+        destination: "{{skitza.cwd}}/{{name|first_lower}}.service.js"
+
+      - source: "{{skitza.cwd}}/factory.spec.js.jinja"
+        destination: "{{skitza.cwd}}/{{name|first_lower}}.service.spec.js"
+
+  - command: filter
+    help: Generate new filter
+    short_help: new filter
+    arguments:
+      - name: name
+        help: filter name
+    templates:
+        - source: "{{skitza.cwd}}/filter.js.jinja"
+          destination: "{{skitza.cwd}}/{{name|first_lower}}.filter.js"
+
+        - source: "{{skitza.cwd}}/filter.spec.js.jinja"
+          destination: "{{skitza.cwd}}/{{name|first_lower}}.filter.spec.js"
